trying to fix paralax effect on mobile devices

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -32,6 +32,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   height: 400px;
+  -webkit-backface-visibility: hidden;
 }
 
 .hidden-section {
